--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "repository": {},
   "dependencies": {
     "babel-brunch": "~6.0.0",
-    "brunch": "~2.1.3",
-    "bulma": "~0.0.16",
+    "brunch": "~2.2.0",
     "clean-css-brunch": "~1.8.0",
     "css-brunch": "~1.7.0",
+    "foundation-sites": "^6.2.0",
     "javascript-brunch": "~1.8.0",
     "phoenix": "file:deps/phoenix",
     "phoenix_html": "file:deps/phoenix_html",
